# new-python-ptl-template

./: .pep8  Makefile  README.md  justfile  pyproject.toml
.github/workflows/: cicd.yaml
src/leet/problem9/: solution.py
tests/leet/problem9/: solution.py
