[tool.poetry]
name = "new-python-ptl-template"
version = "0.1.0"
description = ""
authors = ["nalbarr"]
readme = "README.md"
license = "MIT"

[tool.black]
line-length=120

[tool.poetry.dependencies]
python = "^3.11"
pyright = "^1.1.367"
black = "^24.4.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.3"
flake8 = "^7.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-dependency = "^0.6.0"

[tool.poetry.group.typing.dependencies]
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
line-length = 120
src = ["openad/openad_model_plugin"]
target-version = "py311"
show-fixes = true

[tool.mypy]
files = "tests"
mypy_path = "."
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]

[tool.pytest.ini_options]
pythonpath = [
	"src"
]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]


[tool.ruff.lint]
ignore = [
    "E722", # Do not use bare `except`
    "F401", # imported but unused
]
